<resources>
    <string name="app_name">Eurofurence</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_title">Gdakon 2019</string>
    <string name="navigation_drawer_subtitle">Ancient Greece - Gods of Olympus</string>
    <string name="navigation_drawer_item_info">Info</string>
    <string name="navigation_drawer_item_poi">Point of Interest</string>
    <string name="navigation_drawer_item_personal">Personal</string>
    <string name="navigation_drawer_item_personal_messages">Personal Messages</string>
    <string name="navigation_drawer_item_personal_collect_em_all">Collect \'Em All</string>
    <string name="navigation_drawer_item_external">External</string>
    <string name="navigation_drawer_item_external_website">Website</string>
    <string name="navigation_drawer_item_external_twitter">Twitter</string>
    <string name="navigation_drawer_item_app_management">App Management</string>
    <string name="navigation_drawer_item_app_management_update">Update</string>
    <string name="navigation_drawer_item_app_management_about">About</string>
    <string name="settings">Settings</string>
    <string name="settings_ui_settings">UI settings</string>
    <string name="settings_this_can_be_changed">This can be changed in your settings at any time.</string>
    <string name="settings_app_settings">App Settings</string>
    <string name="settings_app_settings_alert_time">Alert time</string>
    <string name="settings_app_settings_alert_time_summary">Minutes a notification will appear for an event</string>
    <string name="settings_app_settings_show_expired_announcements">Show expired Announcements</string>
    <string name="settings_app_settings_show_expired_announcements_summary">This will show you all the announcements that have expired</string>
    <string name="settings_app_settings_shortened_dates_and_times">Shortened dates and times</string>
    <string name="settings_app_settings_shortened_dates_and_times_summary">Display dates in names instead of numbers (Friday vs 13&#8211;08)</string>
    <string name="settings_analytics">Analytics</string>
    <string name="settings_analytics_settings">Analytics settings</string>
    <string name="settings_analytics_enabled">Enable Analytics</string>
    <string name="settings_analytics_enabled_summary">Enable usage statistics</string>
    <string name="settings_analytics_enabled_summary_on">Usage statistics turned on</string>
    <string name="settings_analytics_enabled_summary_off">Usage statistics turned off</string>
    <string name="settings_analytics_polling_intervals">Analytics Polling Interval</string>
    <string name="settings_analytics_polling_intervals_summary">Percentage of user events to track</string>
    <string name="settings_analytics_allow_collecting_of_analytical_data">Allow Gdakon to collect anonymous analytical data.</string>
    <string name="settings_analytics_allow_collecting_of_performance_data">Allow Gdakon to collect performance data.</string>
    <string name="settings_debug">Debug</string>
    <string name="settings_debug_summary">Settings to debug the application</string>
    <string name="settings_debug_event_dates">Debug event dates</string>
    <string name="settings_debug_event_dates_summary">Change events dates to our current date so we can debug timed notifications as well as show upcoming</string>
    <string name="settings_debug_date_offset">Debug date offset</string>
    <string name="settings_debug_date_offset_summary">Amount of days to offset events</string>
    <string name="settings_debug_schedule_notifications">Schedule notifications for testing</string>
    <string name="settings_debug_schedule_notifications_summary">Schedules a notification in the near future for testing instead of actual event time</string>
    <string name="settings_show_irrelevant_announcements">Show expired announcements</string>
    <string name="settings_use_days_of_the_week">Use days of the week instead of actual dates.</string>
    <string name="settings_switch_short_and_long_press_for_events">Switch the short press and long press behaviour for events.</string>
    <string name="settings_immediately_close_app_on_back">Immediately close app on back button press</string>
    <string name="settings_get_notified_minutes_before">Get notified this many minutes before the start of a favorited event.</string>
    <string name="settings_amount_of_minutes_to_get_an_alert">Amount of minutes to get an alert for a favorited event.</string>
    <string name="settings_analytics_track_usage">Track usage with analytics</string>
    <string name="settings_analytics_track_performance">Track performance statistics</string>
    <string name="settings_tweak_event_days_so_it_seems_like_its_today">Tweak event days so it seems like it\'s the current date</string>
    <string name="settings_amount_of_days_to_offset_by">The amount of days to offset by. Must be integer</string>
    <string name="settings_amount_of_days_to_offset_event_schedule_by">Amount of days to offset the event schedule by</string>
    <string name="settings_schedule_events_in_5_minutes">Schedule event reminders ASAP.</string>
    <string name="action_report_bug">Report a Bug</string>
    <string name="action_report_feedback">Feedback</string>
    <string name="action_get_help">Get help</string>
    <string name="event_list_title">Event List</string>
    <string name="event_details_title">Event Details</string>
    <string name="event">Event</string>
    <string name="events">Events</string>
    <string name="event_schedule">Event Schedule</string>
    <string name="event_tracks">Event tracks</string>
    <string name="event_weekday_from_to">%1$s from %2$s to %3$s</string>
    <string name="event_unable_to_locate_room">Unable to locate room!</string>
    <string name="event_run_by">Run by %1$s</string>
    <string name="event_pager_search_by_title">Search by title</string>
    <string name="event_upcoming">Upcoming events</string>
    <string name="event_running">Running events</string>
    <string name="event_favorited">Favorited events</string>
    <string name="event_options_for">Event options for event %1$s</string>
    <string name="event_add_to_favorites">Add event to favorites</string>
    <string name="event_remove_from_favorites">Remove event from favorites</string>
    <string name="event_changed_status">Changed event status!</string>
    <string name="event_share_event">Share Event</string>
    <string name="event_share_export_to_calendar">Export to calendar</string>
    <string name="event_check_out_url">Check out %1$s!\n%2$s</string>
    <string name="event_countdown_minutes">%1$d min</string>
    <string name="event_did_not_find">I\'m sorry, we didn\'t find any event!</string>
    <string name="announcements">Announcements</string>
    <string name="announcement_title">Announcement Title</string>
    <string name="announcement_content">Announcement Content</string>
    <string name="announcement_loading_failed">Unable to load announcement</string>
    <string name="dealer_list_title">Dealer List</string>
    <string name="dealer_details_title">Dealer Details</string>
    <string name="dealers">Dealers</string>
    <string name="dealer_name">Dealer Name</string>
    <string name="dealer_subname">Subname</string>
    <string name="dealer_about_artist">About the Artist</string>
    <string name="dealer_about_art">About the Art</string>
    <string name="dealer_telegram_handle">%1$s @ Telegram</string>
    <string name="dealer_twitter_handle">%1$s @ Twitter</string>
    <string name="dealer_location_and_availability">Location &amp; Availability</string>
    <string name="dealer_only_present_on">Only present on: %1$s</string>
    <string name="dealer_located_in_the_after_dark">Located in the After Dark Dealers Den</string>
    <string name="dealer_artist_did_not_supply_a_description">This artist did not supply any artist description to show to you :(</string>
    <string name="dealer_options_for">Dealer options for %1$s</string>
    <string name="dealer_share_dealer">Share Dealer</string>
    <string name="dealer_check_out_dealer_url">Check out %1$s at the dealers den!\n%2$s</string>
    <string name="dealer_could_not_navigate_to">Could not navigate to dealer</string>
    <string name="dealer_did_not_find">I\'m sorry, but we didn\'t find any dealer!</string>
    <string name="fursuit_game">Fursuit Games</string>
    <string name="fursuit_game_you_have_collected_number_suits">You have collected %1$d suits, ranking you at number %2$d!</string>
    <string name="fursuit_game_already_caught">You\'ve already caught this suiter</string>
    <string name="fursuit_game_name_species">%1$s the %2$s</string>
    <string name="fursuit_game_fill_in_id">Fill in a fursuiter ID!</string>
    <string name="fursuit_game_they_have_a_tag">They should have a tag somewhere!</string>
    <string name="fursuit_game_you_have_collected">You have collected</string>
    <string name="fursuit_game_return_to_tagging_menu">Return to the tagging menu</string>
    <string name="fursuit_game_collect">Collect</string>
    <string name="fursuit_game_my_collection">My collection</string>
    <string name="message_list_title">Message List</string>
    <string name="message_item_title">Message Item</string>
    <string name="message_no_subject">No subject</string>
    <string name="message_from_name">From: %1$s</string>
    <string name="message_sent">Sent</string>
    <string name="message_sent_date">Sent: %1$s</string>
    <string name="message_received">Received</string>
    <string name="message_received_date">Received: %1$s</string>
    <string name="message_read">Read</string>
    <string name="message_read_date">Read: %1$s</string>
    <string name="message_marked_as_read">Message has been marked as read!</string>
    <string name="message_failed_to_retrieve">Failed to retrieve messages!</string>
    <string name="message_you_have_unread_messages">You have %1$d new, unread personal message(s)</string>
    <string name="message_you_have_messages">You have %1$d personal message(s)</string>
    <string name="convention_information">Convention Information</string>
    <string name="login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_reg_number">Registration number</string>
    <string name="login_password">Password</string>
    <string name="login_authenticating">Authenticating&#8230;</string>
    <string name="login_details">Login details</string>
    <string name="login_logged_in_as">You are currently logged in as %1$s.</string>
    <string name="login_benefits">While being logged in, you will receive personal notifications from Eurofurence on this device and you can use additional services that require authentication.</string>
    <string name="login_valid_until">You will be automatically logged out in about %1$s.</string>
    <string name="login_logout">Logout</string>
    <string name="login_logged_out">Logging you out, goodbye!</string>
    <string name="login_not_logged_in">You\'re not logged in!</string>
    <string name="login_tap_to_login">Tap here to login using your registration details and receive personalized information from Gdakon!</string>
    <string name="login_unsuccessful">Your login was unsuccessful, are you sure you entered the correct data?</string>
    <string name="login_information">Your login credentials for the app are the same as for the Gdakon Registration System.</string>
    <string name="login_failed">Failed to log you in!</string>
    <string name="clear_database">Clear database</string>
    <string name="misc_home">Home</string>
    <string name="misc_days">Days</string>
    <string name="misc_maps">Maps</string>
    <string name="navigation_drawer_item_additional_services">Additional Services</string>
</resources>