<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/navHome"
            android:icon="@drawable/icon_home"
            android:title="@string/misc_home" />
        <item
            android:id="@+id/navInfoList"
            android:icon="@drawable/icon_info"
            android:title="@string/navigation_drawer_item_info"
            android:visible="false" />
        <item
            android:id="@id/navEventList"
            android:icon="@drawable/icon_calendar"
            android:title="@string/events" />
        <item
            android:id="@id/navDealerList"
            android:icon="@drawable/icon_dealer"
            android:title="@string/dealers" />
        <item
            android:id="@id/navMapList"
            android:icon="@drawable/icon_map_world"
            android:title="@string/misc_maps" />
    </group>

    <item
        android:title="@string/navigation_drawer_item_personal"
        android:visible="false">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@id/navLogin"
                    android:checkable="false"
                    android:icon="@drawable/icon_user"
                    android:title="@string/login" />
                <item
                    android:id="@+id/navMessages"
                    android:icon="@drawable/icon_message"
                    android:title="@string/navigation_drawer_item_personal_messages" />
                <item
                    android:id="@+id/navFursuitGames"
                    android:icon="@drawable/icon_paw"
                    android:title="@string/navigation_drawer_item_personal_collect_em_all" />

                <item
                    android:id="@+id/navAdditionalServices"
                    android:icon="@drawable/common_google_signin_btn_icon_dark"
                    android:title="@string/navigation_drawer_item_additional_services" />
            </group>
        </menu>
    </item>
    <item android:title="@string/navigation_drawer_item_external">
        <menu>
            <group>
                <item
                    android:id="@+id/navWebSite"
                    android:icon="@drawable/icon_domain"
                    android:title="@string/navigation_drawer_item_external_website" />
                <item
                    android:id="@+id/navWebTwitter"
                    android:icon="@drawable/icon_twitter"
                    android:title="@string/navigation_drawer_item_external_twitter" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/groupManagement"
        android:title="@string/navigation_drawer_item_app_management">
        <menu>
            <item
                android:id="@+id/navFeedback"
                android:icon="@drawable/icon_like_filled"
                android:title="@string/action_report_feedback"
                android:visible="false" />
            <item
                android:id="@+id/navDevReload"
                android:icon="@drawable/icon_refresh"
                android:title="@string/navigation_drawer_item_app_management_update" />
            <item
                android:id="@+id/navDevClear"
                android:icon="@drawable/icon_delete"
                android:title="@string/clear_database" />
            <item
                android:id="@id/navSettings"
                android:icon="@drawable/icon_settings"
                android:title="@string/settings" />
            <item
                android:id="@id/navAbout"
                android:icon="@drawable/icon_about"
                android:title="@string/navigation_drawer_item_app_management_about" />
        </menu>
    </item>

</menu>
